<?xml version="1.0" encoding="utf-8"?>
<ScrollView  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    android:scrollbars="vertical"  
    android:fadingEdge="vertical">  
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="@drawable/white"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_gravity="center_horizontal"
>
    <TextView
    android:id="@+id/myTextView2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/hello_world"
  />
  <SurfaceView
    android:id="@+id/mSurfaceView1"
    android:visibility="visible" 
    android:layout_width="320dp" 
    android:layout_height="240dp"
    android:layout_gravity="center_horizontal" >
  </SurfaceView> 
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
  >
  <Button
    android:id="@+id/myButton1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_initcamera"/>
  <Button
    android:id="@+id/myButton2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_closecamera"/>
  <Button
    android:id="@+id/myButton3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_take_picture"/>
  </LinearLayout>
    <TextView 
    android:id="@+id/myTextView3"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/oneshotframe"/>
  <ImageView
    android:id="@+id/myImageView1" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_gravity="center" 
    android:contentDescription="@string/imgdescription"/>
      <TextView 
    android:id="@+id/myTextView4"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/copyright"/>
</LinearLayout>
</ScrollView>
