<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="@drawable/white"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
>
  <TextView
    android:id="@+id/myTextView1"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/hello_world"
  />
  <!-- 設定EditText可接收輸入長度為62個字元 -->
  <EditText
    android:id="@+id/myEditText1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:maxLength="62"
    android:textSize="18sp"
    android:inputType="none"
  >
  </EditText>
  <SurfaceView
    android:id="@+id/mSurfaceView1"
    android:visibility="visible" 
    android:layout_width="320dp" 
    android:layout_height="240dp">
  </SurfaceView> 
  <ImageView
    android:id="@+id/myImageView1" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_gravity="center" 
    android:contentDescription="@string/imgdescription"/>
  <Button
    android:id="@+id/myButton0" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_button1"/>
</LinearLayout>